--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,21 @@
 <html>
 
 <head>
-    <title>Todo App</title>
+    <title>Todo List</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
-    <h1>Todo List</h1>
-    <input type="text" id="taskInput" placeholder="Nhập nhiệm vụ">
-    <button onclick="addTask()">Thêm</button>
-    <ul id="taskList"></ul>
+    <div class="container">
+        <h1><i class="fas fa-tasks"></i> Todo List</h1>
+        <div class="input-group">
+            <input type="text" id="taskInput" placeholder="Nhập nhiệm vụ mới...">
+            <input type="date" id="deadlineInput">
+            <button onclick="addTask()"><i class="fas fa-plus"></i> Thêm</button>
+        </div>
+        <ul id="taskList"></ul>
+    </div>
     <script src="script.js"></script>
 </body>
 
